# hackathonII-Backend

./: .env.example  .gitignore  CLAUDE.md  MCP_INSPECTOR_TEST.md  TASK_002.md  TASK_PROMPT.MD  check_config.py  comprehensive_verification.py  debug_mcp_tools.py  main.py  mcp_agent.config.yaml  parse_health.py  pyproject.toml  requirements-dev.txt  requirements.txt  show_health.py  test_metrics.py  test_sse_behavior.py  verify_critical_functions.py  verify_server.py
.claude/skills/todo-manager/: SKILL.md
.specify/memory/: constitution.md
history/prompts/001-ai-agent-orchestrator/: 001-create-ai-orchestrator-specification.spec.prompt.md  002-ai-agent-orchestrator-implementation-plan.plan.prompt.md  003-specification-clarification-session.misc.prompt.md  004-generate-tasks-for-ai-agent-orchestrator.tasks.prompt.md  005-implement-t002-t003-dependencies.tasks.prompt.md  006-implement-t004-t005-t006.green.prompt.md  008-implement-t009-mcp-config.green.prompt.md  (+17 more)
specs/001-ai-agent-orchestrator/: PLAN_PROMPT.MD  SPECIFY_PROMPT.MD  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-fastmcp-database-server/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-agent-mcp-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: config.py  main.py
src/agents/: __init__.py  todo_agent.py  tool_definitions.py
src/api/: __init__.py  routes.py  schemas.py
src/mcp/: __init__.py  client.py
src/mcp_server/: __init__.py  database.py  models.py  schemas.py  server.py
src/observability/: __init__.py  logging.py  metrics.py
src/resilience/: __init__.py  circuit_breaker.py  retry.py
src/streaming/: __init__.py  chatkit.py
tests/integration/: __init__.py  test_agent_tools.py  test_all_crud_operations.py  test_mcp_connection.py  test_streaming.py
tests/manual/: test_crud_operations.py
tests/mcp_server/: __init__.py  conftest.py  test_database.py  test_models.py  test_tools.py
tests/unit/: test_chatkit_mapping.py  test_todo_agent_instructions.py
(+35 files in other folders)
