[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hackathonii-backend"
version = "0.1.0"
description = "AI Agent Orchestrator for Todo Management using FastAPI and OpenAI Agents SDK"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "openai-agents>=0.6.4",
    "openai-agents-mcp>=0.0.8",
    "openai>=1.57.4",
    "pydantic>=2.10.5",
    "uvicorn[standard]>=0.34.0",
    "python-dotenv>=1.0.1",
    "tenacity>=9.0.0",
    "python-json-logger>=3.2.1",
]

[tool.setuptools]
packages = []
